--- a/backend/graphql-api/tsconfig.json
+++ b/backend/graphql-api/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "module": "esnext",
+    "module": "commonjs",
     "allowJs": true,
     "noImplicitAny": false
   },
