--- a/.stylelintrc
+++ b/.stylelintrc
@@ -6,18 +6,7 @@
   ],
   "rules": {
     "property-no-unknown": [ true, {
-      "ignoreProperties": [
-        "text-align-vertical",
-        "margin-vertical",
-        "margin-horizontal",
-        "padding-vertical",
-        "padding-horizontal",
-        "shadow-color",
-        "shadow-offset",
-        "shadow-radius",
-        "resize-mode",
-        "shadow-opacity"
-      ]
+      "ignoreProperties": []
     }]
   }
 }
